test/tests/stages/18_structures/valid/extra_credit/other_features/struct_decl_in_switch_statement.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[140]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(my_struct)
  =
  {
  const int(1)
  ,
  const int(2)
  }
  ;
  int
  identifier(result)
  =
  const int(0)
  ;
  switch
  (
  identifier(my_struct)
  .
  identifier(a)
  )
  {
  struct
  identifier(s)
  {
  double
  identifier(x)
  ;
  double
  identifier(y)
  ;
  double
  identifier(z)
  ;
  }
  ;
  struct
  identifier(s)
  identifier(my_struct)
  ;
  case
  const int(1)
  :
  identifier(my_struct)
  .
  identifier(x)
  =
  const double(20.0)
  ;
  identifier(my_struct)
  .
  identifier(y)
  =
  const double(30.0)
  ;
  identifier(result)
  =
  identifier(my_struct)
  .
  identifier(x)
  +
  identifier(my_struct)
  .
  identifier(y)
  ;
  break
  ;
  case
  const int(2)
  :
  identifier(my_struct)
  .
  identifier(x)
  =
  const double(11.)
  ;
  identifier(my_struct)
  .
  identifier(y)
  =
  const double(12.)
  ;
  identifier(result)
  =
  identifier(my_struct)
  .
  identifier(x)
  +
  identifier(my_struct)
  .
  identifier(y)
  ;
  break
  ;
  default
  :
  identifier(my_struct)
  .
  identifier(x)
  =
  const double(0.)
  ;
  identifier(my_struct)
  .
  identifier(y)
  =
  const double(0.)
  ;
  identifier(result)
  =
  identifier(my_struct)
  .
  identifier(x)
  +
  identifier(my_struct)
  .
  identifier(y)
  ;
  }
  return
  identifier(result)
  ;
  }
